--- a/data/Argoverse.yaml
+++ b/data/Argoverse.yaml
@@ -1,6 +1,6 @@
 # YOLOv5 🚀 by Ultralytics, GPL-3.0 license
 # Argoverse-HD dataset (ring-front-center camera) http://www.cs.cmu.edu/~mengtial/proj/streaming/
-# Example usage: python train.py --data Argoverse.yaml
+# Example usage: python train_yolov5.py --data Argoverse.yaml
 # parent
 # ├── yolov5
 # └── datasets
