--- a/data/GlobalWheat2020.yaml
+++ b/data/GlobalWheat2020.yaml
@@ -1,6 +1,6 @@
 # YOLOv5 🚀 by Ultralytics, GPL-3.0 license
 # Global Wheat 2020 dataset http://www.global-wheat.com/
-# Example usage: python train.py --data GlobalWheat2020.yaml
+# Example usage: python train_yolov5.py --data GlobalWheat2020.yaml
 # parent
 # ├── yolov5
 # └── datasets
