--- a/data/Objects365.yaml
+++ b/data/Objects365.yaml
@@ -1,6 +1,6 @@
 # YOLOv5 🚀 by Ultralytics, GPL-3.0 license
 # Objects365 dataset https://www.objects365.org/
-# Example usage: python train.py --data Objects365.yaml
+# Example usage: python train_yolov5.py --data Objects365.yaml
 # parent
 # ├── yolov5
 # └── datasets
