--- a/data/coco.yaml
+++ b/data/coco.yaml
@@ -1,6 +1,6 @@
 # YOLOv5 🚀 by Ultralytics, GPL-3.0 license
 # COCO 2017 dataset http://cocodataset.org
-# Example usage: python train.py --data coco.yaml
+# Example usage: python train_yolov5.py --data coco.yaml
 # parent
 # ├── yolov5
 # └── datasets
