--- a/data/coco128.yaml
+++ b/data/coco128.yaml
@@ -1,6 +1,6 @@
 # YOLOv5 🚀 by Ultralytics, GPL-3.0 license
 # COCO128 dataset https://www.kaggle.com/ultralytics/coco128 (first 128 images from COCO train2017)
-# Example usage: python train.py --data coco128.yaml
+# Example usage: python train_yolov5.py --data coco128.yaml
 # parent
 # ├── yolov5
 # └── datasets
