MStacMR | .gitignore | add big files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 /VG
 /yolov5
+/STACMR_train/CTC/images
+/STACMR_train/CTC/detections
+/STACMR_train/flickr30k/images
+/STACMR_train/flickr30k/detections
+/STACMR_train/text_caps/images
+/STACMR_train/text_caps/detections
+/precomputed_embeddings
+/checkpoints_and_vocabs
