--- a/full_config_nested.yaml
+++ b/full_config_nested.yaml
@@ -30,7 +30,7 @@ image_encoder_params:
     num_ocr_boxes: 16
     ocr_box_dim: 300
     use_abs: false
-    use_bn: true  # Exp 1
+    use_bn: false
     use_l2norm: false
     use_l2norm_final: true  # Exp 1
     use_ocr_emb: true   
