--- a/full_config_nested.yaml
+++ b/full_config_nested.yaml
@@ -1,18 +1,18 @@
 device: 'cpu'
 yolov5:
-    model_name: 'checkpoints_and_vocabs/yolo_best.pt'
+    model_name: '../data/checkpoints_and_vocabs/yolo_best.pt'
 clip:
     model_name: 'ViT-B/32'
 use_checkpoint: false
-checkpoint_path: 'checkpoints_and_vocabs/model_best1.pth.tar'
+checkpoint_path: 'checkpoints/model_best.pth'
 training_params:
-    train_annot_map_path: 'checkpoints_and_vocabs/full_dataset_train_mapa_good.json'
-    train_img_emb_path: 'precomputed_embeddings/final_all_train_emb_CLIP_fixed.npy'
-    train_ocr_emb_path: 'precomputed_embeddings/final_all_train_emb_CLIP_fixed.npy'
-    eval_annot_map_path: 'checkpoints_and_vocabs/full_dataset_CTC_test_mapa_good.json'
-    eval_img_emb_path: 'precomputed_embeddings/final_all_test_emb_CLIP_fixed.npy'
-    eval_ocr_emb_path: 'precomputed_embeddings/final_all_test_emb_CLIP_fixed.npy'
-    vocab_path: 'checkpoints_and_vocabs/f30k_precomp_vocab.pkl'
+    train_annot_map_path: '../data/checkpoints_and_vocabs/full_dataset_train_mapa_good.json'
+    train_img_emb_path: '../data/precomputed_embeddings/final_all_train_emb_CLIP_new1.npy'
+    train_ocr_emb_path: '../data/precomputed_embeddings/final_all_train_ocr_muse_emb_0.npy'
+    eval_annot_map_path: '../data/checkpoints_and_vocabs/full_dataset_CTC_test_mapa_good.json'
+    eval_img_emb_path: '../data/precomputed_embeddings/final_all_test_emb_CLIP_new1.npy'
+    eval_ocr_emb_path: '../data/precomputed_embeddings/final_all_test_CTC_ocr_muse_emb_0.npy'
+    vocab_path: '../data/checkpoints_and_vocabs/f30k_precomp_vocab.pkl'
     learning_rate: 0.0002
     lr_update: 15
     num_epochs: 30
