--- a/full_config_nested.yaml
+++ b/full_config_nested.yaml
@@ -13,6 +13,8 @@ training_params:
     eval_img_emb_path: '../data/precomputed_embeddings/final_all_test_emb_CLIP_new1.npy'
     eval_ocr_emb_path: '../data/precomputed_embeddings/final_all_test_CTC_ocr_muse_emb_0.npy'
     vocab_path: '../data/checkpoints_and_vocabs/f30k_precomp_vocab.pkl'
+    muse_path: '../data/labse_ru_en'
+    raw_images_path: '../STACMR_train'
     learning_rate: 0.0002
     lr_update: 15
     num_epochs: 30
@@ -33,12 +35,14 @@ image_encoder_params:
     use_bn: false
     use_l2norm: false
     use_l2norm_final: false
-    use_ocr_emb: true   
+    use_ocr_emb: true
+    use_gcn_scene_text_emb: false
+    muse_embedder_max_ocr_captions: 256
 caption_encoder_params:
     caption_encoder_num_layers: 1
     caption_encoder_word_dim: 300  # caption embedding size
     caption_encoder_embedding_dim: 512
-caption_generator_params:
+caption_gener ator_params:
     dim_vid: 512  # было 2048, подозреваю, что это много
     dim_caption_generation_hidden: 512  # мб теперь надо поменять
     input_dropout_p_caption_generation_enc: 0.2
