--- a/full_config_nested.yaml
+++ b/full_config_nested.yaml
@@ -32,8 +32,8 @@ image_encoder_params:
     num_ocr_boxes: 16
     ocr_box_dim: 512
     use_abs: false
-    use_bn: false
-    use_l2norm: false
+    use_bn: true
+    use_l2norm: true
     use_l2norm_final: true
     use_ocr_emb: true
     use_gcn_scene_text_emb: false
