--- a/inference_config_nested.yaml
+++ b/inference_config_nested.yaml
@@ -4,14 +4,14 @@ yolov5:
 clip:
     model_name: 'ViT-B/32'
 use_checkpoint: true
-checkpoint_path: 'checkpoints_and_vocabs/model_best1.pth.tar'
+checkpoint_path: 'best_model.pth'
 training_params:
     train_annot_map_path: 'checkpoints_and_vocabs/full_dataset_train_mapa_good.json'
     train_img_emb_path: 'precomputed_embeddings/final_all_train_emb_CLIP_fixed.npy'
     train_ocr_emb_path: 'precomputed_embeddings/final_all_train_emb_CLIP_fixed.npy'
     eval_annot_map_path: 'checkpoints_and_vocabs/full_dataset_CTC_test_mapa_good.json'
-    eval_img_emb_path: 'precomputed_embeddings/final_all_test_emb_CLIP_fixed.npy'
-    eval_ocr_emb_path: 'precomputed_embeddings/final_all_test_emb_CLIP_fixed.npy'
+    eval_img_emb_path: 'precomputed_embeddings/final_all_test_emb_CLIP_new1.npy'
+    eval_ocr_emb_path: 'precomputed_embeddings/final_all_test_emb_CLIP_new1.npy'
     vocab_path: 'checkpoints_and_vocabs/f30k_precomp_vocab.pkl'
     learning_rate: 0.0002
     lr_update: 15
@@ -37,7 +37,7 @@ image_encoder_params:
 caption_encoder_params:
     caption_encoder_num_layers: 1
     caption_encoder_word_dim: 300  # caption embedding size
-    caption_encoder_embedding_dim: 512
+    caption_encoder_embedding_dim: 1024
 caption_generator_params:
     dim_vid: 512  # было 2048, подозреваю, что это много
     dim_caption_generation_hidden: 512  # мб теперь надо поменять
