--- a/full_config_nested_without_l2.yaml
+++ b/full_config_nested_without_l2.yaml
@@ -33,19 +33,19 @@ image_encoder_params:
     num_ocr_boxes: 16
     ocr_box_dim: 512
     use_abs: false
-    use_bn: true
-    use_l2norm: true
-    use_l2norm_final: true
+    use_bn: false
+    use_l2norm: false
+    use_l2norm_final: false
     use_ocr_emb: true
     use_gcn_scene_text_emb: false
     muse_embedder_max_ocr_captions: 256
 caption_encoder_params:
     encoder_path: 'checkpoints_and_vocabs/labse_ru_en'
     #encoder_path: 'cointegrated/LaBSE-en-ru'
-    freeze_encoder: false
+    freeze_encoder: true
     output_dim: 512
     max_caption_len: 100
-    use_l2norm_final: true
+    use_l2norm_final: false
 #    caption_encoder_num_layers: 1
 #    caption_encoder_word_dim: 300  # caption embedding size
 #    caption_encoder_embedding_dim: 512
