--- a/full_config_nested_weighted.yaml
+++ b/full_config_nested_weighted.yaml
@@ -13,7 +13,7 @@ training_params:
     eval_img_emb_path: '../all_data/precomputed_embeddings/final_all_test_emb_CLIP_new1.npy'
     eval_ocr_emb_path: '../all_data/precomputed_embeddings/final_all_test_CTC_ocr_muse_emb_11.npy'
     vocab_path: '../all_data/checkpoints_and_vocabs/f30k_precomp_vocab.pkl'
-    muse_path: '../all_data/muse
+    muse_path: '../all_data/muse'
     raw_images_path: '../STACMR_train'
     learning_rate: 0.0002
     lr_update: 15
