sync full_config_nested.yaml & full_config_nested_without_encoder.yaml

--- a/config/full_config_nested.yaml
+++ b/config/full_config_nested.yaml
@@ -16,7 +16,7 @@ training_params:
     raw_images_path: '../STACMR_train'
     learning_rate: 0.0002
     lr_update: 15
-    num_epochs: 40
+    num_epochs: 30
     batch_size: 128
     grad_clip: 2.0
     weight_retrieval_loss: 2.0
@@ -36,9 +36,9 @@ image_encoder_params:
     num_ocr_boxes: 16
     ocr_box_dim: 512
     use_abs: false
-    use_bn: true
-    use_l2norm: true
-    use_l2norm_final: true
+    use_bn: false
+    use_l2norm: false
+    use_l2norm_final: false
     use_ocr_emb: true
     use_gcn_scene_text_emb: false
 caption_encoder_params:
@@ -48,9 +48,9 @@ caption_encoder_params:
     output_dim: 512
     max_caption_len: 100
     use_l2norm_final: true
-#    caption_encoder_num_layers: 1
-#    caption_encoder_word_dim: 300  # caption embedding size
-#    caption_encoder_embedding_dim: 512
+    caption_encoder_num_layers: 1
+    caption_encoder_word_dim: 300  # caption embedding size
+    caption_encoder_embedding_dim: 512
 caption_generator_params:
     dim_vid: 512  # было 2048, подозреваю, что это много
     dim_caption_generation_hidden: 512  # мб теперь надо поменять
