--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 clip-by-openai==1.1
 keras-ocr==0.8.9
+loguru==0.5.3
 networkx==2.6.3
 nltk==3.6.5
 numpy==1.21.1
@@ -19,4 +20,3 @@ torch==1.7.1
 torchvision==0.8.2
 tqdm==4.62.3
 transformers==4.14.1
-typing_extensions==4.0.1
